@@ -215,7 +215,7 @@
 			typedef struct
 			{
 				uint8_t                      ReportID; /** Report ID of the report within the HID interface */
-				uint8_t                      ReportSizeBits[3]; /** Total number of bits in each report type for the given Report ID,
+				uint16_t                     ReportSizeBits[3]; /** Total number of bits in each report type for the given Report ID,
 				                                                 *  indexed by the \ref HID_ReportItemTypes_t enum
 																 */
 			} HID_ReportSizeInfo_t;
